Main page fix + crew on small devices

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,7 @@
 }
 
 @layer base {
+  .container,
   main {
     @apply xs:px-10 xs:py-8 px-6 py-4 sm:px-6 md:px-16 md:py-16;
   }
@@ -25,8 +26,20 @@
     @apply max-sm:text-md text-lg;
   }
 
+  img {
+    @apply md:transition-transform;
+  }
+
   * {
     @apply text-md max-xs:text-justify;
+  }
+
+  .separator {
+    @apply flex items-center gap-x-[8vw] max-lg:flex-col md:justify-between;
+  }
+
+  .context-img {
+    @apply object-scale-down max-md:pb-8 md:h-100 md:hover:scale-105 lg:max-w-1/2;
   }
 }
 
